--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,11 +6,16 @@ input {
 	width:90%;
 }
 
-.delete_btn {
+.edit_btn {
 	width: 20px;
 	height: 20px;
 	padding: 0;
 	font-size: 75%;
+}
+
+#cancel_btn {
+	color: #337ab7;
+    text-decoration: underline;
 }
 
 #add_account, #add_update {
@@ -19,6 +24,6 @@ input {
 	margin-left:8px;
 }
 
-.add_new {
+.add_new, .edit_task {
 	display: none;
 }
