--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,13 +6,13 @@ input {
 	width:90%;
 }
 
-.edit_btn, .delete_btn {
+.edit_btn, .delete_btn, .edit_acct, .delete_acct {
 	height: 20px;
 	padding: 0;
 	font-size: 75%;
 }
 
-#cancel_btn {
+.cancel_btn {
 	color: #337ab7;
     text-decoration: underline;
 }
@@ -23,6 +23,6 @@ input {
 	margin-left:8px;
 }
 
-.add_new, .edit_task {
+.add_new, .edit_task, .edit_account {
 	display: none;
 }
