Updated some views and README file for new live demo

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -61,3 +61,10 @@ header {
 	text-decoration: none;
 	display: inline-block;
 }
+
+.return {
+	margin-top: 5em;
+	padding-top: 1.5em;
+	border-top: 1px solid #333;
+	text-align: center;
+}
